# typing-trainer-pro

./: .gitignore  LICENSE  README.md  SECURITY.md  TypingTrainerPro.spec  build_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md
src/typing_trainer/: __init__.py  __main__.py  exceptions.py  features.py  logging_setup.py  main.py
src/typing_trainer/config/: __init__.py  defaults.toml  settings.py
src/typing_trainer/core/: __init__.py  sentence_generator.py  stats_calculator.py  typing_engine.py
src/typing_trainer/services/: __init__.py  settings_manager.py  stats_tracker.py  timer_service.py
src/typing_trainer/storage/: __init__.py  database.py  feature_models.py  models.py  repositories.py
src/typing_trainer/ui/: __init__.py  chart_widgets.py  dashboard.py  finger_widget.py  keyboard_widget.py  main_window.py  mapping.py  styles.qss
src/typing_trainer_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/unit/: test_database.py  test_exceptions.py  test_logging_setup.py  test_sentence_generator.py  test_settings.py  test_stats_calculator.py  test_stats_tracker.py  test_timer_service.py  test_typing_engine.py
